# ufo-gleaner

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: Publish Package.yaml  publish-package.yml
src/: test_utils.rs
src/bindings/: mod.rs  py_data.rs  py_error.rs  py_font.rs  py_gleaner.rs  py_provider.rs
src/core/: constants.rs  error.rs  font.rs  gleaner.rs  mod.rs  plist.rs  provider.rs
src/core/glif/: context.rs  data.rs  handlers.rs  helpers.rs  parser.rs  reader.rs
