[package]
name = "ufo_gleaner"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "High-performance UFO/GLIF parser for Python written in Rust"
repository = "https://github.com/knutnergaard/ufo-gleaner"

[lib]
name = "ufo_gleaner"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["serde", "abi3-py310"], optional = true }
plist = "1.7.4"
quick-xml = "0.38.1"
tempfile = "3.20.0"
indexmap = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"

[features]
default = [] # No Python by default
python = ["pyo3/extension-module", "pyo3/serde"]

[dev-dependencies]
tempfile = "3"
