[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ufo_gleaner"
version = "0.2.2"
description = "High-performance UFO/GLIF parser for Python written in Rust"
authors = [{ name = "Knut Nergaard", email = "knut.nergaard@gmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "font design",
    "UFO",
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]

dependencies = [
    "cffi",
]

[project.urls]
Homepage = "https://github.com/knutnergaard/SMufoLib"
